# serpula_rasa

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: run-tests.yml
src/serpula_rasa/: example.ipynb  example.py  image.py  meta.py
tests/: conftest.py  test_image.py  utils.py
