[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=64", "setuptools-scm>=8" ]

[project]
name = "serpula-rasa"
version = "0.0.1"
description = "Blank snake implementation prototype for image-based single-cell profiling"
readme = "README.md"
authors = [
  { name = "d33bs" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "black>=25.1",
  "cellpose>=4.0.6",
  "cp-measure>=0.1.11",
  "isort>=6.0.1",
  "jupyterlab>=4.4.2",
  "jupyterlab-code-formatter>=3.0.2",
  "jupytext>=1.17.1",
  "lancedb>=0.24.2",
  "matplotlib>=3.10.5",
  "numpy>=1.26.4",
  "opencv-python-headless>=4.11.0.86",
  "pandas>=2.2.3",
  "pyarrow>=21",
  "scikit-image>=0.24",
]

[tool.setuptools_scm]
root = "."
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
version_file = "src/serpula_rasa/_version.py"

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
lint.select = [
  # flake8-builtins
  "A",
  # flake8-annotations
  "ANN",
  # flake8-comprehensions
  "C4",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # isort
  "I",
  # pylint
  "PL",
  # ruff
  "RUF",
  # flake8-simplify
  "SIM",
  "W",
]
lint.per-file-ignores."src/serpula_rasa/example.ipynb" = [ "PLR2004" ]

# Ignore `F401` (unused imports) for `__init__.py` file
lint.per-file-ignores."src/serpula_rasa/example.py" = [ "PLR2004" ]

[tool.pytest.ini_options]
pythonpath = [ "." ]

[tool.poe.tasks]
# tasks for development environments
test.shell = """
pytest
"""
jupyter.shell = """
jupyter lab
"""

[tool.jupytext]
formats = "ipynb,py:light"

[tool.vulture]
min_confidence = 90
paths = [ "src/serpula_rasa" ]
